src/query_plan/snapshots/tailcall__query_plan__tests__PostAndUser_execution_plan.snap
---
source: src/query_plan/tests.rs
expression: execution_plan
---
Sequential:
    Parallel:
        Resolve(0)
        Resolve(3)
    Resolve(1)
