src/query_plan/snapshots/tailcall__query_plan__tests__PostAndUser_operation_plan.snap
---
source: src/query_plan/tests.rs
expression: operation_plan
---
OperationPlan
    fields:
        [posts](by 3)
            title
            user(by 4)
                name
        user(by 6)
            username
            email

    selections:
        Resolver(4):
                name

        Resolver(3):
                title

        Resolver(6):
                username
                email
