src/query_plan/snapshots/tailcall__query_plan__tests__PostAndUser_output.snap
---
source: src/query_plan/tests.rs
expression: result
---
{
  "posts": [
    {
      "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
      "user": {
        "name": null
      }
    },
    {
      "title": "qui est esse",
      "user": {
        "name": null
      }
    },
    {
      "title": "ea molestias quasi exercitationem repellat qui ipsa sit aut",
      "user": {
        "name": null
      }
    },
    {
      "title": "eum et est occaecati",
      "user": {
        "name": null
      }
    },
    {
      "title": "nesciunt quas odio",
      "user": {
        "name": null
      }
    },
    {
      "title": "dolorem eum magni eos aperiam quia",
      "user": {
        "name": null
      }
    },
    {
      "title": "magnam facilis autem",
      "user": {
        "name": null
      }
    },
    {
      "title": "dolorem dolore est ipsam",
      "user": {
        "name": null
      }
    },
    {
      "title": "nesciunt iure omnis dolorem tempora et accusantium",
      "user": {
        "name": null
      }
    },
    {
      "title": "optio molestias id quia eum",
      "user": {
        "name": null
      }
    },
    {
      "title": "et ea vero quia laudantium autem",
      "user": {
        "name": null
      }
    },
    {
      "title": "in quibusdam tempore odit est dolorem",
      "user": {
        "name": null
      }
    },
    {
      "title": "dolorum ut in voluptas mollitia et saepe quo animi",
      "user": {
        "name": null
      }
    },
    {
      "title": "voluptatem eligendi optio",
      "user": {
        "name": null
      }
    },
    {
      "title": "eveniet quod temporibus",
      "user": {
        "name": null
      }
    },
    {
      "title": "sint suscipit perspiciatis velit dolorum rerum ipsa laboriosam odio",
      "user": {
        "name": null
      }
    },
    {
      "title": "fugit voluptas sed molestias voluptatem provident",
      "user": {
        "name": null
      }
    },
    {
      "title": "voluptate et itaque vero tempora molestiae",
      "user": {
        "name": null
      }
    },
    {
      "title": "adipisci placeat illum aut reiciendis qui",
      "user": {
        "name": null
      }
    },
    {
      "title": "doloribus ad provident suscipit at",
      "user": {
        "name": null
      }
    },
    {
      "title": "asperiores ea ipsam voluptatibus modi minima quia sint",
      "user": {
        "name": null
      }
    },
    {
      "title": "dolor sint quo a velit explicabo quia nam",
      "user": {
        "name": null
      }
    },
    {
      "title": "maxime id vitae nihil numquam",
      "user": {
        "name": null
      }
    },
    {
      "title": "autem hic labore sunt dolores incidunt",
      "user": {
        "name": null
      }
    },
    {
      "title": "rem alias distinctio quo quis",
      "user": {
        "name": null
      }
    },
    {
      "title": "est et quae odit qui non",
      "user": {
        "name": null
      }
    },
    {
      "title": "quasi id et eos tenetur aut quo autem",
      "user": {
        "name": null
      }
    },
    {
      "title": "delectus ullam et corporis nulla voluptas sequi",
      "user": {
        "name": null
      }
    },
    {
      "title": "iusto eius quod necessitatibus culpa ea",
      "user": {
        "name": null
      }
    },
    {
      "title": "a quo magni similique perferendis",
      "user": {
        "name": null
      }
    },
    {
      "title": "ullam ut quidem id aut vel consequuntur",
      "user": {
        "name": null
      }
    },
    {
      "title": "doloremque illum aliquid sunt",
      "user": {
        "name": null
      }
    },
    {
      "title": "qui explicabo molestiae dolorem",
      "user": {
        "name": null
      }
    },
    {
      "title": "magnam ut rerum iure",
      "user": {
        "name": null
      }
    },
    {
      "title": "id nihil consequatur molestias animi provident",
      "user": {
        "name": null
      }
    },
    {
      "title": "fuga nam accusamus voluptas reiciendis itaque",
      "user": {
        "name": null
      }
    },
    {
      "title": "provident vel ut sit ratione est",
      "user": {
        "name": null
      }
    },
    {
      "title": "explicabo et eos deleniti nostrum ab id repellendus",
      "user": {
        "name": null
      }
    },
    {
      "title": "eos dolorem iste accusantium est eaque quam",
      "user": {
        "name": null
      }
    },
    {
      "title": "enim quo cumque",
      "user": {
        "name": null
      }
    },
    {
      "title": "non est facere",
      "user": {
        "name": null
      }
    },
    {
      "title": "commodi ullam sint et excepturi error explicabo praesentium voluptas",
      "user": {
        "name": null
      }
    },
    {
      "title": "eligendi iste nostrum consequuntur adipisci praesentium sit beatae perferendis",
      "user": {
        "name": null
      }
    },
    {
      "title": "optio dolor molestias sit",
      "user": {
        "name": null
      }
    },
    {
      "title": "ut numquam possimus omnis eius suscipit laudantium iure",
      "user": {
        "name": null
      }
    },
    {
      "title": "aut quo modi neque nostrum ducimus",
      "user": {
        "name": null
      }
    },
    {
      "title": "quibusdam cumque rem aut deserunt",
      "user": {
        "name": null
      }
    },
    {
      "title": "ut voluptatem illum ea doloribus itaque eos",
      "user": {
        "name": null
      }
    },
    {
      "title": "laborum non sunt aut ut assumenda perspiciatis voluptas",
      "user": {
        "name": null
      }
    },
    {
      "title": "repellendus qui recusandae incidunt voluptates tenetur qui omnis exercitationem",
      "user": {
        "name": null
      }
    },
    {
      "title": "soluta aliquam aperiam consequatur illo quis voluptas",
      "user": {
        "name": null
      }
    },
    {
      "title": "qui enim et consequuntur quia animi quis voluptate quibusdam",
      "user": {
        "name": null
      }
    },
    {
      "title": "ut quo aut ducimus alias",
      "user": {
        "name": null
      }
    },
    {
      "title": "sit asperiores ipsam eveniet odio non quia",
      "user": {
        "name": null
      }
    },
    {
      "title": "sit vel voluptatem et non libero",
      "user": {
        "name": null
      }
    },
    {
      "title": "qui et at rerum necessitatibus",
      "user": {
        "name": null
      }
    },
    {
      "title": "sed ab est est",
      "user": {
        "name": null
      }
    },
    {
      "title": "voluptatum itaque dolores nisi et quasi",
      "user": {
        "name": null
      }
    },
    {
      "title": "qui commodi dolor at maiores et quis id accusantium",
      "user": {
        "name": null
      }
    },
    {
      "title": "consequatur placeat omnis quisquam quia reprehenderit fugit veritatis facere",
      "user": {
        "name": null
      }
    },
    {
      "title": "voluptatem doloribus consectetur est ut ducimus",
      "user": {
        "name": null
      }
    },
    {
      "title": "beatae enim quia vel",
      "user": {
        "name": null
      }
    },
    {
      "title": "voluptas blanditiis repellendus animi ducimus error sapiente et suscipit",
      "user": {
        "name": null
      }
    },
    {
      "title": "et fugit quas eum in in aperiam quod",
      "user": {
        "name": null
      }
    },
    {
      "title": "consequatur id enim sunt et et",
      "user": {
        "name": null
      }
    },
    {
      "title": "repudiandae ea animi iusto",
      "user": {
        "name": null
      }
    },
    {
      "title": "aliquid eos sed fuga est maxime repellendus",
      "user": {
        "name": null
      }
    },
    {
      "title": "odio quis facere architecto reiciendis optio",
      "user": {
        "name": null
      }
    },
    {
      "title": "fugiat quod pariatur odit minima",
      "user": {
        "name": null
      }
    },
    {
      "title": "voluptatem laborum magni",
      "user": {
        "name": null
      }
    },
    {
      "title": "et iusto veniam et illum aut fuga",
      "user": {
        "name": null
      }
    },
    {
      "title": "sint hic doloribus consequatur eos non id",
      "user": {
        "name": null
      }
    },
    {
      "title": "consequuntur deleniti eos quia temporibus ab aliquid at",
      "user": {
        "name": null
      }
    },
    {
      "title": "enim unde ratione doloribus quas enim ut sit sapiente",
      "user": {
        "name": null
      }
    },
    {
      "title": "dignissimos eum dolor ut enim et delectus in",
      "user": {
        "name": null
      }
    },
    {
      "title": "doloremque officiis ad et non perferendis",
      "user": {
        "name": null
      }
    },
    {
      "title": "necessitatibus quasi exercitationem odio",
      "user": {
        "name": null
      }
    },
    {
      "title": "quam voluptatibus rerum veritatis",
      "user": {
        "name": null
      }
    },
    {
      "title": "pariatur consequatur quia magnam autem omnis non amet",
      "user": {
        "name": null
      }
    },
    {
      "title": "labore in ex et explicabo corporis aut quas",
      "user": {
        "name": null
      }
    },
    {
      "title": "tempora rem veritatis voluptas quo dolores vero",
      "user": {
        "name": null
      }
    },
    {
      "title": "laudantium voluptate suscipit sunt enim enim",
      "user": {
        "name": null
      }
    },
    {
      "title": "odit et voluptates doloribus alias odio et",
      "user": {
        "name": null
      }
    },
    {
      "title": "optio ipsam molestias necessitatibus occaecati facilis veritatis dolores aut",
      "user": {
        "name": null
      }
    },
    {
      "title": "dolore veritatis porro provident adipisci blanditiis et sunt",
      "user": {
        "name": null
      }
    },
    {
      "title": "placeat quia et porro iste",
      "user": {
        "name": null
      }
    },
    {
      "title": "nostrum quis quasi placeat",
      "user": {
        "name": null
      }
    },
    {
      "title": "sapiente omnis fugit eos",
      "user": {
        "name": null
      }
    },
    {
      "title": "sint soluta et vel magnam aut ut sed qui",
      "user": {
        "name": null
      }
    },
    {
      "title": "ad iusto omnis odit dolor voluptatibus",
      "user": {
        "name": null
      }
    },
    {
      "title": "aut amet sed",
      "user": {
        "name": null
      }
    },
    {
      "title": "ratione ex tenetur perferendis",
      "user": {
        "name": null
      }
    },
    {
      "title": "beatae soluta recusandae",
      "user": {
        "name": null
      }
    },
    {
      "title": "qui qui voluptates illo iste minima",
      "user": {
        "name": null
      }
    },
    {
      "title": "id minus libero illum nam ad officiis",
      "user": {
        "name": null
      }
    },
    {
      "title": "quaerat velit veniam amet cupiditate aut numquam ut sequi",
      "user": {
        "name": null
      }
    },
    {
      "title": "quas fugiat ut perspiciatis vero provident",
      "user": {
        "name": null
      }
    },
    {
      "title": "laboriosam dolor voluptates",
      "user": {
        "name": null
      }
    },
    {
      "title": "temporibus sit alias delectus eligendi possimus magni",
      "user": {
        "name": null
      }
    },
    {
      "title": "at nam consequatur ea labore ea harum",
      "user": {
        "name": null
      }
    }
  ],
  "user": {
    "username": "Bret",
    "email": "Sincere@april.biz"
  }
}
