src/query_plan/snapshots/tailcall__query_plan__tests__PostsComplex_operation_plan.snap
---
source: src/query_plan/tests.rs
expression: operation_plan
---
OperationPlan
    fields:
        posts(Some(Id(0))):
            title(None):
                Scalar
            body(None):
                Scalar
            user(Some(Id(1))):
                name(None):
                    Scalar
                username(None):
                    Scalar
                website(Some(Id(2))):
                    Scalar



    selections:
        Resolver(2):

        Resolver(1):
                name
                username

        Resolver(0):
                title
                body
