src/query_plan/snapshots/tailcall__query_plan__tests__PostsComplex_output.snap
---
source: src/query_plan/tests.rs
expression: err
---
"IOException: HTTP status client error (404 Not Found)"
