src/query_plan/snapshots/tailcall__query_plan__tests__PostsSimple_execution_result.snap
---
source: src/query_plan/tests.rs
expression: execution_result
---
{
    Id(
        0,
    ): Err(
        "IOException: Request error: error sending request for url (http://upstream/graphql): error trying to connect: dns error: failed to lookup address information: Name or service not known",
    ),
}
