src/query_plan/snapshots/tailcall__query_plan__tests__PostsSimple_operation_plan.snap
---
source: src/query_plan/tests.rs
expression: operation_plan
---
OperationPlan
    fields:
        [posts](by 0)
            title

    selections:
        Resolver(0):
                title
