src/query_plan/snapshots/tailcall__query_plan__tests__User_execution_result.snap
---
source: src/query_plan/tests.rs
expression: execution_result
---
{
    Id(
        6,
    ): Ok(
        Object(
            {
                Name(
                    "id",
                ): Number(
                    Number(1),
                ),
                Name(
                    "name",
                ): String(
                    "Leanne Graham",
                ),
                Name(
                    "username",
                ): String(
                    "Bret",
                ),
                Name(
                    "email",
                ): String(
                    "Sincere@april.biz",
                ),
                Name(
                    "address",
                ): Object(
                    {
                        Name(
                            "street",
                        ): String(
                            "Kulas Light",
                        ),
                        Name(
                            "suite",
                        ): String(
                            "Apt. 556",
                        ),
                        Name(
                            "city",
                        ): String(
                            "Gwenborough",
                        ),
                        Name(
                            "zipcode",
                        ): String(
                            "92998-3874",
                        ),
                        Name(
                            "geo",
                        ): Object(
                            {
                                Name(
                                    "lat",
                                ): String(
                                    "-37.3159",
                                ),
                                Name(
                                    "lng",
                                ): String(
                                    "81.1496",
                                ),
                            },
                        ),
                    },
                ),
                Name(
                    "phone",
                ): String(
                    "1-770-736-8031 x56442",
                ),
                Name(
                    "website",
                ): String(
                    "hildegard.org",
                ),
                Name(
                    "company",
                ): Object(
                    {
                        Name(
                            "name",
                        ): String(
                            "Romaguera-Crona",
                        ),
                        Name(
                            "catchPhrase",
                        ): String(
                            "Multi-layered client-server neural-net",
                        ),
                        Name(
                            "bs",
                        ): String(
                            "harness real-time e-markets",
                        ),
                    },
                ),
            },
        ),
    ),
}
