src/query_plan/snapshots/tailcall__query_plan__tests__Users_operation_plan.snap
---
source: src/query_plan/tests.rs
expression: operation_plan
---
OperationPlan
    fields:
        user(by 3)
            name
            email

    selections:
        Resolver(3):
                name
                email
